# opencv-exercises

./: pyproject.toml
lab_10/: Lab10_Report.md  README.md  lab10_deep_learning.ipynb
lab_11/: Lab11_Report.md  README.md  lab11.ipynb
lab_11/cifar10_classification/: train.cache  val.cache
lab_11/cifar10_yolo/: dataset.yaml
lab_11/cifar10_yolo/labels/: train.cache
lab_11/cifar10_yolo/labels/train/: img_0001.txt  img_0088.txt  img_0141.txt  img_0192.txt  img_0206.txt  img_0269.txt  img_0328.txt  img_0382.txt  img_0449.txt  img_0456.txt
lab_12/: Lab12_Report.md  lab12_facial_recognition.ipynb
lab_8/: GUI_README.md  Lab8_Report.md  digit_recognition_gui.py  lab8_machine_learning.ipynb
lab_9/: Lab9_Report.md  README.md  lab9_object_detection.ipynb
runs/classify/train/: args.yaml  results.csv
runs/classify/train/weights/: best.pt  last.pt
runs/detect/train/: args.yaml
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml
